--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/brown_500</color>
+    <color name="colorPrimaryDark">@color/brown_700</color>
+    <color name="colorAccent">@color/brown_200</color>
+
+    <color name="brown_500">#795548</color>
+    <color name="brown_200">#bcaaa4</color>
+    <color name="brown_700">#5d4037</color>
+
 </resources>
