--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -3,6 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.wendy.fpt.popmov.view.MovieDetailActivity">
 
+    <include layout="@layout/app_toolbar" />
+
+    <fragment
+        android:id="@+id/fragment"
+        android:name="com.wendy.fpt.popmov.view.MovieDetailFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@layout/fragment_movie_detail" />
 </LinearLayout>
