--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.wendy.fpt.popmov.view.MovieDetailActivity">
+    tools:context="com.wendy.fpt.popmov.view.activity.MovieDetailActivity">
 
     <include layout="@layout/app_toolbar" />
 
     <fragment
         android:id="@+id/fragment"
-        android:name="com.wendy.fpt.popmov.view.MovieDetailFragment"
+        android:name="com.wendy.fpt.popmov.view.activity.MovieDetailFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout="@layout/fragment_movie_detail" />
