--- a/app/src/main/res/layout/item_mov_poster.xml
+++ b/app/src/main/res/layout/item_mov_poster.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@color/brown_200">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/img_mov_poster"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:background="#123123"/>
+        android:adjustViewBounds="true"/>
 
 </LinearLayout>
