--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -8,10 +8,15 @@
 
     <include layout="@layout/app_toolbar" />
 
-    <fragment
-        android:id="@+id/fragment"
-        android:name="com.wendy.fpt.popmov.view.activity.MovieDetailFragment"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/fragment_movie_detail" />
+        android:layout_height="match_parent">
+
+        <fragment
+            android:id="@+id/fragment"
+            android:name="com.wendy.fpt.popmov.view.activity.MovieDetailFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:layout="@layout/fragment_movie_detail" />
+    </ScrollView>
 </LinearLayout>
