--- a/app/src/main/res/layout/item_mov_poster.xml
+++ b/app/src/main/res/layout/item_mov_poster.xml
@@ -7,6 +7,7 @@
         android:id="@+id/img_mov_poster"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"/>
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/img_mov_poster"/>
 
 </LinearLayout>
