--- a/app/src/main/res/menu/menu_main_fragment.xml
+++ b/app/src/main/res/menu/menu_main_fragment.xml
@@ -11,4 +11,9 @@
         android:title="@string/action_movie_top_rated"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/action_movie_favorites"
+        android:title="@string/action_movie_favorites"
+        app:showAsAction="never"/>
+
 </menu>
